--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Food-shop",
+  "name": "Food-shop pages",
   "version": "1.0.1",
   "description": "Good food delivery",
   "main": "\t",
